<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="14dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTint="@color/pale_gray"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_dialog"
            android:layout_width="0dp"

            android:layout_height="@dimen/toolbar_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                style="@style/H4Left"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_extradition_dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_close_dialog_extradition"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginEnd="22dp"

                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnl1"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_dialog" >

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/tv_credit_ikish"
                style="@style/H5Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/checkCredit"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/credit_ikish" />

            <TextView
                android:layout_marginStart="16dp"
                style="@style/H7Right"

                android:id="@+id/tv_credot_ikish_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@string/credit_ikish_description"
                app:layout_constraintEnd_toStartOf="@+id/checkCredit"
                app:layout_constraintTop_toBottomOf="@+id/tv_credit_ikish" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnl2"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnl1" >

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkAccountingBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/tv_accounting_bank"
                style="@style/H5Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/checkAccountingBank"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/accounting_bank" />

            <TextView
                android:gravity="right"
                android:id="@+id/tv_accounting_bank_description"
                style="@style/H7Right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"

                android:text="@string/accounting_bank_description"
                app:layout_constraintEnd_toStartOf="@+id/checkAccountingBank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_accounting_bank" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="10dp"


            android:backgroundTint="#c4c4c4"

            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:fontFamily="@font/iransans"
            android:textSize="14sp"
            android:textColor="@color/white"

            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="22dp"
            android:text="تایید"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnl2" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>