<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/cardMain"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_gray"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            >


            <com.google.android.material.card.MaterialCardView

                android:backgroundTint="@color/light_background"
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                app:cardCornerRadius="10dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/border_background"
                android:layout_height="38dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_back_frament"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >
                <RelativeLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="38dp">
                    <EditText
                        android:id="@+id/edt_search"
                        android:fontFamily="@font/iransans"
                        android:layout_centerVertical="true"

                        android:layout_width="match_parent"
                        style="@style/H5Right"
                        android:gravity="right|center_vertical"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/where_to_move"
                        android:textColorHint="@color/invalid_name_color"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="50dp"
                        android:layout_height="38dp"/>
                    <ImageView

                        android:visibility="gone"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/ic_close_circle"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_width="18dp"
                        android:layout_height="18dp"/>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/iv_back_frament"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_back"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/layout_search"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_not_found"
                android:layout_marginTop="84dp"
                android:layout_width="96dp"
                android:layout_height="96dp"/>
            <TextView

                android:layout_marginRight="54dp"
                android:layout_marginLeft="54dp"
                android:text="@string/not_found_search"
                android:textColor="@color/invalid_name_color"
                android:lineSpacingExtra="9sp"
                android:textSize="13sp"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:fontFamily="@font/iransans"

                android:id="@+id/btn_search_again"
                android:layout_width="match_parent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/topaz"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"
                android:backgroundTint="@color/pale_gray"
                app:cornerRadius="10dp"
                android:textColor="@color/topaz"
                android:textStyle="bold"
                android:layout_marginTop="36dp"
                android:text="@string/search_again"
                android:textSize="14sp"
                android:lineSpacingExtra="18sp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroolView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="right"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView

                    android:layout_marginBottom="10dp"
                    android:id="@+id/tv_choose_your_location"
                    style="@style/H4Left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="22dp"
                     />
                <TextView

                    android:visibility="gone"
                    style="@style/H5Right"
                    android:id="@+id/tv_recently_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="22dp"
                    android:text="@string/recently_seen" />

                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/recently_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_location"
                    />

                <TextView
                    android:visibility="gone"
                    style="@style/H5Right"
                    android:id="@+id/tv_popular_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="22dp"
                    android:text="@string/pupolar_location" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/location_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"

                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>
</layout>
